Update Open Graph meta tags with new URLs

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:title" content="Pesquisa de Opinião — Espírito Santo (Anônima)" />
   <meta property="og:description" content="Leva 2–3 minutos. Respostas anônimas e usadas apenas de forma estatística." />
   <!-- Imagem opcional (vou explicar abaixo como colocar) -->
-  <meta property="og:image" content="https://SEU-USUARIO.github.io/pesquisa-es/preview.png" />
-  <meta property="og:url" content="https://SEU-USUARIO.github.io/pesquisa-es/" />
+ <meta property="og:image" content="https://cleonenas123-dev.github.io/PESQUISA-ES/preview.png"/>
+<meta property="og:url" content="https://cleonenas123-dev.github.io/PESQUISA-ES/"/>
 
   <!-- Redireciona automaticamente para o Tally -->
   <meta http-equiv="refresh" content="0; url=https://tally.so/r/KY1daD" />
